feat : codigo funcional